# Algorithums_final

./: CMakeLists.txt  listTest.c  listTest.h  strLinkeListTest.c  strList.c  strList.h
Header/: data_store.h
Other/: test_doc
Sources/: arrayList.c  functions.c  linkedList.c  main.c  read_file.c  write_in.c
